# bushel

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py
backend/app/consolidate/: router.py  schemas.py  service.py  units.py
backend/app/ingredients/: canonicalize.py  normalize.py  parser.py  router.py  schemas.py
backend/app/kroger/: auth.py  client.py  router.py  schemas.py
backend/app/llm/: client.py
backend/app/matching/: price_cache.py  pricing.py  purchase.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_canonicalize.py  test_config.py  test_consolidate_pantry.py  test_consolidate_router.py  test_consolidate_schemas.py  test_consolidate_service.py  test_consolidate_staples.py  test_cors.py  test_db.py  test_ingredients_router.py  test_kroger_auth.py  test_kroger_client_auth.py  test_kroger_client_cart.py  test_kroger_client_catalog.py  test_kroger_router.py  test_kroger_schemas.py  test_llm_client.py  test_matching_apply.py  test_matching_home_store.py  test_matching_multi_upc.py  test_matching_router.py  test_matching_schemas.py  test_matching_send.py  test_matching_service.py  test_models.py  test_normalize.py  test_pantry_router.py  test_pantry_service.py  test_parser.py  test_price_cache.py  test_pricing.py  test_purchase.py  test_recipe_schemas.py  test_recipe_service.py  test_recipes_router.py  test_scraper.py  test_settings_service.py  test_staples_router.py  test_staples_service.py  (+1 more)
(+133 files in other folders)
